[package]
name = "elfbin"
version = "0.1.0"
keywords = ["elf", "binary", "object", "compiler"]
categories = ["encoding", "command-line-utilities", "development-tools"]
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/apparentlymart/rust-binbin"
repository = "https://github.com/apparentlymart/rust-binbin"

[dependencies]
binbin = "0.2.0"
structopt = "0.3.14"

[dev-dependencies]
elf = "0.0.10"

[lib]
path = "src/lib.rs"

[[bin]]
name = "elfbin"
path = "src/bin/main.rs"
