[package]
authors = ["Martin Atkins <mart@degeneration.co.uk>"]
categories = ["encoding", "command-line-utilities", "development-tools"]
description = "Build ELF object files defining symbols with fixed binary data"
edition = "2018"
homepage = "https://github.com/apparentlymart/elfbin"
keywords = ["elf", "binary", "object", "compiler"]
license = "MIT"
name = "elfbin"
readme = "README.md"
repository = "https://github.com/apparentlymart/elfbin"
version = "0.4.0"

[dependencies]
binbin = "0.2.0"
structopt = "0.3.14"

[dev-dependencies]
elf = "0.0.10"

[lib]
path = "src/lib.rs"

[[bin]]
name = "elfbin"
path = "src/bin/main.rs"
